White space fix only. Translators can ignore.
Sponsored by: iXsystems


git-svn-id: https://svn.freebsd.org/doc/head@43884 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -27,11 +27,11 @@
 
     <para>&os; is a distributed project with users and contributors
       located all over the world.  As such, &os; supports localization
-      into many languages, allowing users to view, input, or
-      process data in non-English languages.  One can
-      choose from most of the major languages, including, but not
-      limited to:  Chinese, German, Japanese, Korean, French, Russian,
-      and Vietnamese.</para>
+      into many languages, allowing users to view, input, or process
+      data in non-English languages.  One can choose from most of the
+      major languages, including, but not limited to:  Chinese,
+      German, Japanese, Korean, French, Russian, and
+      Vietnamese.</para>
 
     <indexterm>
       <primary>internationalization</primary>
@@ -41,7 +41,8 @@
 
     <para>The term internationalization has been shortened to
       <acronym>i18n</acronym>, which represents the number of letters
-      between the first and the last letters of <literal>internationalization</literal>.
+      between the first and the last letters of
+      <literal>internationalization</literal>.
       <acronym>L10n</acronym> uses the same naming scheme, but from
       <literal>localization</literal>.  The
       <acronym>i18n</acronym>/<acronym>L10n</acronym> methods,
@@ -72,7 +73,8 @@
       </listitem>
 
       <listitem>
-	<para>How to find <acronym>i18n</acronym>-compliant applications.</para>
+	<para>How to find <acronym>i18n</acronym>-compliant
+	  applications.</para>
       </listitem>
 
       <listitem>
@@ -148,34 +150,36 @@
       <para>To determine the current locale setting:</para>
 
       <screen>&prompt.user; <userinput>locale</userinput></screen>
+
       <indexterm><primary>encodings</primary></indexterm>
       <indexterm><primary>ASCII</primary></indexterm>
 
-      <para>Language specific character sets, such as
-	  ISO8859-1, ISO8859-15, KOI8-R, and CP437, are
-	  described in &man.multibyte.3;.  The active list of character sets can be found at the <link
-	xlink:href="http://www.iana.org/assignments/character-sets">IANA
-	Registry</link>.</para>
+      <para>Language specific character sets, such as ISO8859-1,
+	ISO8859-15, KOI8-R, and CP437, are described in
+	&man.multibyte.3;.  The active list of character sets can be
+	found at the <link
+	  xlink:href="http://www.iana.org/assignments/character-sets">IANA
+	  Registry</link>.</para>
 
       <para>Some languages, such as Chinese or Japanese, cannot be
-	represented using <acronym>ASCII</acronym> characters and require an extended
-	language encoding using either wide or multibyte characters.
-	Examples of wide or multibyte encodings include EUC and Big5.
-	Older applications may mistake these encodings for control
-	characters while newer applications usually recognize these
-	characters.  Depending on the implementation, users may be
-	required to compile an application with wide or multibyte
-	character support, or to configure it correctly.</para>  
+	represented using <acronym>ASCII</acronym> characters and
+	require an extended language encoding using either wide or
+	multibyte characters.  Examples of wide or multibyte encodings
+	include EUC and Big5.  Older applications may mistake these
+	encodings for control characters while newer applications
+	usually recognize these characters.  Depending on the
+	implementation, users may be required to compile an
+	application with wide or multibyte character support, or to
+	configure it correctly.</para>
 
-    <note>
-      <para>&os; uses Xorg-compatible locale encodings.</para>
-    </note>
+      <note>
+	<para>&os; uses Xorg-compatible locale encodings.</para>
+      </note>
 
-    <para>The rest of
-	this section describes the various methods for configuring the
-	locale on a &os; system.  The next section will discuss the
-	considerations for finding and compiling applications with <acronym>i18n</acronym>
-	support.</para>
+      <para>The rest of this section describes the various methods for
+	configuring the locale on a &os; system.  The next section
+	will discuss the considerations for finding and compiling
+	applications with <acronym>i18n</acronym> support.</para>
 
     <sect2 xml:id="setting-locale">
       <title>Setting Locale for Login Shell</title>
@@ -199,15 +203,16 @@
 	<listitem>
 	  <indexterm><primary>MIME</primary></indexterm>
 
-	  <para><envar>MM_CHARSET</envar>, which sets the <acronym>MIME</acronym>
-	    character set used by applications</para>
+	  <para><envar>MM_CHARSET</envar>, which sets the
+	    <acronym>MIME</acronym> character set used by
+	    applications</para>
 	</listitem>
       </itemizedlist>
 
       <para>In addition to the user's shell configuration, these
-	variables should also be set for
-	specific application configuration and
-	<application>Xorg</application> configuration.</para>
+	variables should also be set for specific application
+	configuration and <application>Xorg</application>
+	configuration.</para>
 
       <indexterm><primary>locale</primary></indexterm>
       <indexterm><primary>login class</primary></indexterm>
@@ -224,9 +229,10 @@
 
 	<para>This first method is the recommended method as it
 	  assigns the required environment variables for locale name
-	  and <acronym>MIME</acronym> character sets for every possible shell.  This
-	  setup can either be performed by each user or it can be
-	  configured for all users by the superuser.</para>
+	  and <acronym>MIME</acronym> character sets for every
+	  possible shell.  This setup can either be performed by each
+	  user or it can be configured for all users by the
+	  superuser.</para>
 
 	<para>This minimal example sets both variables for Latin-1
 	  encoding in the <filename>.login_conf</filename> of an
@@ -342,10 +348,10 @@ me:\
 	<sect3 xml:id="startup-file">
 	  <title>Shell Startup File Method</title>
 
-	  <para>This second method is not recommended as each shell that is
-	    used requires manual configuration, where each shell has a
-	    different configuration file and differing syntax.  As an
-	    example, to set the German language for the
+	  <para>This second method is not recommended as each shell
+	    that is used requires manual configuration, where each
+	    shell has a different configuration file and differing
+	    syntax.  As an example, to set the German language for the
 	    <command>sh</command> shell, these lines could be added to
 	    <filename>~/.profile</filename> to set the shell for that
 	    user only.  These lines could also be added to
@@ -789,22 +795,23 @@ Not sure where to put this section, perhaps as a note in the File system chapter
       <acronym>i18n</acronym> kits under libraries.  These allow
       developers to write a simple file and translate displayed menus
       and texts to each language.</para>
-    <para>The <link xlink:href="&url.base;/ports/index.html">&os;
-	Ports Collection</link> contains many
-      applications with built-in support for wide or multibyte characters for several
-      languages.  Such applications include <literal>i18n</literal> in their names for
-      easy identification.  However, they do not always support the
-      language needed.</para>
 
-    <para>Some applications can be compiled
-      with the specific
+    <para>The <link xlink:href="&url.base;/ports/index.html">&os;
+	Ports Collection</link> contains many applications with
+      built-in support for wide or multibyte characters for several
+      languages.  Such applications include <literal>i18n</literal> in
+      their names for easy identification.  However, they do not
+      always support the language needed.</para>
+
+    <para>Some applications can be compiled with the specific
       charset.  This is usually done in the port's
       <filename>Makefile</filename> or by passing a value to
-      <application>configure</application>.  Refer to the <acronym>i18n</acronym> documentation
-      in the respective &os; port's source for more information on how to
-      determine the needed <application>configure</application> value 
-      or the port's <filename>Makefile</filename> to determine which
-      compile options to use when building the port.</para>
+      <application>configure</application>.  Refer to the
+      <acronym>i18n</acronym> documentation in the respective &os;
+      port's source for more information on how to determine the
+      needed <application>configure</application> value  or the port's
+      <filename>Makefile</filename> to determine which compile options
+      to use when building the port.</para>
   </sect1>
 
   <sect1 xml:id="lang-setup">
@@ -831,8 +838,9 @@ Not sure where to put this section, perhaps as a note in the File system chapter
 
       <para>This section shows the specific settings needed to
 	localize a &os; system for the Russian language.  Refer to
-	<link linkend="using-localization">Using Localization</link> for
-	a more complete description of each type of setting.</para>
+	<link linkend="using-localization">Using Localization</link>
+	for a more complete description of each type of
+	setting.</para>
 
       <para>To set this locale for the login shell, add the following
 	lines to each user's
@@ -925,16 +933,18 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 
       <note>
 	<para>The Russian XKB keyboard may not work with
-	  non-localized applications.  Minimally localized applications should call a
-	<function>XtSetLanguageProc (NULL, NULL, NULL);</function>
-	function early in the program.</para>
+	  non-localized applications.  Minimally localized
+	  applications should call a <function>XtSetLanguageProc
+	    (NULL, NULL, NULL);</function> function early in the
+	  program.</para>
       </note>
 
-      <para>See <uri xlink:href="http://koi8.pp.ru/xwin.html">http://koi8.pp.ru/xwin.html</uri>
-	for more instructions on
-	localizing <application>Xorg</application> applications.  For
-	more general information about KOI8-R encoding, refer to
-	  <uri xlink:href="http://koi8.pp.ru/">http://koi8.pp.ru/</uri>.</para>
+      <para>See <uri
+	  xlink:href="http://koi8.pp.ru/xwin.html">http://koi8.pp.ru/xwin.html</uri>
+	for more instructions on localizing
+	<application>Xorg</application> applications.  For more
+	general information about KOI8-R encoding, refer to <uri
+	  xlink:href="http://koi8.pp.ru/">http://koi8.pp.ru/</uri>.</para>
     </sect2>
 
     <sect2>
@@ -1017,8 +1027,9 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	    <para>Some &os; contributors have translated parts of the
 	      &os; documentation to other languages.  They are
 	      available through links on the <link
-		xlink:href="&url.base;/index.html">&os; web site</link> or
-	      in <filename>/usr/share/doc</filename>.</para>
+		xlink:href="&url.base;/index.html">&os; web
+		site</link> or in
+	      <filename>/usr/share/doc</filename>.</para>
 	  </listitem>
 	</varlistentry>
       </variablelist>
