Restore <replaceable> tags lost during the DocBook5 conversion.
git-svn-id: https://svn.freebsd.org/doc/head@44069 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/fdp-primer/translations/chapter.xml
+++ b/en_US.ISO8859-1/books/fdp-primer/translations/chapter.xml
@@ -135,7 +135,7 @@
 	  copy of the FreeBSD Subversion repository (at least the
 	  documentation part).  This can be done by running:</para>
 
-	<screen>&prompt.user; <userinput>svn checkout https://svn0.us-east.FreeBSD.org/doc/head/ head</userinput></screen>
+	<screen>&prompt.user; <userinput>svn checkout <replaceable>https://svn0.us-east.FreeBSD.org</replaceable>/doc/head/ head</userinput></screen>
 
 	<para><link xlink:href="https://svn0.us-east.FreeBSD.org/">svn0.us-east.FreeBSD.org</link>
 	is a public <literal>SVN</literal> server.
@@ -158,7 +158,7 @@
 	  <filename>en_US.ISO8859-1/books/fdp-primer/book.xml</filename>,
 	  run:</para>
 
-	<screen>&prompt.user; <userinput>svn diff -r33733:33734 en_US.ISO8859-1/books/fdp-primer/book.xml</userinput></screen>
+	<screen>&prompt.user; <userinput>svn diff -r<replaceable>33733</replaceable>:<replaceable>33734</replaceable> en_US.ISO8859-1/books/fdp-primer/book.xml</userinput></screen>
       </answer>
     </qandaentry>
 
@@ -284,7 +284,7 @@
 
 	<para><literal>sv_SE.ISO8859-1</literal> is the name of the
 	  translation, in
-	  <filename>lang.encoding</filename>
+	  <filename><replaceable>lang</replaceable>.<replaceable>encoding</replaceable></filename>
 	  form.  Note the two Makefiles, which will be used to build
 	  the documentation.</para>
 
@@ -465,7 +465,7 @@
 	<para>Your translated documents should include their own
 	  &dollar;FreeBSD&dollar; line, and change the
 	  <literal>FreeBSD Documentation Project</literal> line to
-	  <literal>The FreeBSD language
+	  <literal>The FreeBSD <replaceable>language</replaceable>
 	    Documentation Project</literal>.</para>
 
 	<para>In addition, you should add a third line which indicates
